# chmabapos_api/openapi.json
@@ -6428,13 +6428,6 @@
             "type": "object",
             "title": "Capabilities"
           },
-          "marketing_features": {
-            "items": {
-              "type": "string"
-            },
-            "type": "array",
-            "title": "Marketing Features"
-          },
           "is_active": {
             "type": "boolean",
             "title": "Is Active",
@@ -6543,20 +6536,6 @@
               }
             ],
             "title": "Capabilities"
-          },
-          "marketing_features": {
-            "anyOf": [
-              {
-                "items": {
-                  "type": "string"
-                },
-                "type": "array"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Marketing Features"
           },
           "is_active": {
             "anyOf": [
